cluster/overlays/zahariev.com/keycloak/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  template:
    spec:
      containers:
      - name: keycloak
