cluster/overlays/zahariev.com/keycloak/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  rules:
  - host: auth.zahariev.com
  tls:
  - hosts:
    - auth.zahariev.com
    secretName: keycloak-tls
